--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3-5-Alpha2
	- Fixed sorting issue on artist when using search method
	- Updated flash player to 5.9.5
	- Fixed bug where you admins couldn't edit preferences of
		users due to missing 'key' on form
	- Added Mime type to Song XML 

--------------------------------------------------------------------------
  v.3.5-Alpha1 12/31/2008
	- Fixed sort_files script so that it properly handles variable
		album art file names in the directories
	- Fixed issue where small thumbnails were used for larger images
		if gd based resizing was enabled in the config
	- Fixed catalog_update.inc so it doesn't produce errors
	- Made democratic play respect force http play
	- Make installation error messages more helpful
	- Added Swedish (sv_SE) translation (Thanks yeager)
	- Allow Add / Verify of sub directories of existing catalogs
	- Prevent an fread of 0 bytes if you seek to the end of a file
	- Added require_localnet_session config that allows you to exclude
		IP(s) from session checks, see config.dist 
	- Added Nusoap (http://sourceforge.net/projects/nusoap/) library
		for use with future lyrics feature
	- Fixed problem with flash player where random urls were not being
		added correctly
	- Fixed problem with user creation using old method (Thx Purdyk)
	- Switched to SHA256() for API and Passwords
	- Added check for BADTIME error code from Last.FM and correctly
		return the error rather then a generic one
	- Fix http auth session issues, where every request blew away the 
		old session information
	- Many other minor improvements (Thx Dipsol)
	- Fixed warnings in caching code (Thx Dipsol)
	- Massive text cleanup (Thx Dipsol)