@@ -24,13 +24,16 @@
 <table class="tabledata" cellpadding="5" cellspacing="0">
 <tr>
 	<td><?php echo _('Name'); ?>:</td>
-	<td colspan="3">
+	<td>
 		<input type="text" name="name" value="<?php echo scrub_out($_REQUEST['name']); ?>" size="20" />
 	</td>
 </tr>
 <tr>
+	<td><?php echo _('IPv4 or IPv6 Addresses'); ?>:</td>
+	<td><?php echo scrub_out($_SERVER['REMOTE_ADDR']); ?></td>
+<tr>
 	<td><?php echo _('Level'); ?>:</td>
-	<td colspan="3">
+	<td>
 		<input name="level" type="radio" value="5" /> <?php echo _('View'); ?>
 		<input name="level" type="radio" value="25" /> <?php echo _('Read'); ?>
 		<input name="level" type="radio" checked="checked" value="50" /> <?php echo _('Read/Write'); ?>
@@ -39,22 +42,22 @@
 </tr>
 <tr>
 	<td><?php echo _('User'); ?>:</td>
-	<td colspan="3">
+	<td>
 		<?php show_user_select('user'); ?>
 	</td>
 </tr>
 <tr>
-	<td colspan="4"><h4><?php echo _('RPC Options'); ?></h4></td>
+	<td colspan="2"><h4><?php echo _('RPC Options'); ?></h4></td>
 </tr>
 <tr>
 	<td><?php echo _('Remote Key'); ?>:</td>
-	<td colspan="3">
+	<td>
 		<input type="text" name="key" value="<?php echo scrub_out($_REQUEST['end']); ?>" maxlength="32" />
 	</td>
 </tr>
 </table>
 <div class="formValidation">
-		<?php Core::form_register('add_acl'); ?>
+		<?php echo Core::form_register('add_acl'); ?>
 		<input class="button" type="submit" value="<?php echo _('Create ACL'); ?>" />
 </div>
 </form>
