@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3-5-Alpha2
+	- Added User Agent to IP History information gathering
+	- Added Access Control List Wizards to make API interface
+		setup easier
+	- Added IPv6 support for Access Control, Sessions, IP History 
 	- Fixed sorting issue on artist when using search method
 	- Updated flash player to 5.9.5
 	- Fixed bug where you admins couldn't edit preferences of
